packc/gen/PackParser.cpp

// Generated from Pack.g4 by ANTLR 4.9


#include "PackVisitor.h"

#include "PackParser.h"


using namespace antlrcpp;
using namespace antlr4;

PackParser::PackParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PackParser::~PackParser() {
  delete _interpreter;
}

std::string PackParser::getGrammarFileName() const {
  return "Pack.g4";
}

const std::vector<std::string>& PackParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PackParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- HexConstantContext ------------------------------------------------------------------

PackParser::HexConstantContext::HexConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PackParser::HexConstantContext::HexStart() {
  return getToken(PackParser::HexStart, 0);
}

tree::TerminalNode* PackParser::HexConstantContext::HexEnd() {
  return getToken(PackParser::HexEnd, 0);
}

std::vector<tree::TerminalNode *> PackParser::HexConstantContext::HexByte() {
  return getTokens(PackParser::HexByte);
}

tree::TerminalNode* PackParser::HexConstantContext::HexByte(size_t i) {
  return getToken(PackParser::HexByte, i);
}


size_t PackParser::HexConstantContext::getRuleIndex() const {
  return PackParser::RuleHexConstant;
}


antlrcpp::Any PackParser::HexConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitHexConstant(this);
  else
    return visitor->visitChildren(this);
}

PackParser::HexConstantContext* PackParser::hexConstant() {
  HexConstantContext *_localctx = _tracker.createInstance<HexConstantContext>(_ctx, getState());
  enterRule(_localctx, 0, PackParser::RuleHexConstant);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(22);
    match(PackParser::HexStart);
    setState(26);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PackParser::HexByte) {
      setState(23);
      match(PackParser::HexByte);
      setState(28);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(29);
    match(PackParser::HexEnd);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

PackParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PackParser::TypeContext::U8() {
  return getToken(PackParser::U8, 0);
}

tree::TerminalNode* PackParser::TypeContext::U16() {
  return getToken(PackParser::U16, 0);
}

tree::TerminalNode* PackParser::TypeContext::U32() {
  return getToken(PackParser::U32, 0);
}

tree::TerminalNode* PackParser::TypeContext::U64() {
  return getToken(PackParser::U64, 0);
}

tree::TerminalNode* PackParser::TypeContext::I8() {
  return getToken(PackParser::I8, 0);
}

tree::TerminalNode* PackParser::TypeContext::I16() {
  return getToken(PackParser::I16, 0);
}

tree::TerminalNode* PackParser::TypeContext::I32() {
  return getToken(PackParser::I32, 0);
}

tree::TerminalNode* PackParser::TypeContext::I64() {
  return getToken(PackParser::I64, 0);
}

tree::TerminalNode* PackParser::TypeContext::Hex() {
  return getToken(PackParser::Hex, 0);
}

tree::TerminalNode* PackParser::TypeContext::Str() {
  return getToken(PackParser::Str, 0);
}

tree::TerminalNode* PackParser::TypeContext::Pack() {
  return getToken(PackParser::Pack, 0);
}

tree::TerminalNode* PackParser::TypeContext::Bin() {
  return getToken(PackParser::Bin, 0);
}


size_t PackParser::TypeContext::getRuleIndex() const {
  return PackParser::RuleType;
}


antlrcpp::Any PackParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

PackParser::TypeContext* PackParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 2, PackParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PackParser::U8)
      | (1ULL << PackParser::U16)
      | (1ULL << PackParser::U32)
      | (1ULL << PackParser::U64)
      | (1ULL << PackParser::I8)
      | (1ULL << PackParser::I16)
      | (1ULL << PackParser::I32)
      | (1ULL << PackParser::I64)
      | (1ULL << PackParser::Pack)
      | (1ULL << PackParser::Hex)
      | (1ULL << PackParser::Str)
      | (1ULL << PackParser::Bin))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecoratorDefContext ------------------------------------------------------------------

PackParser::DecoratorDefContext::DecoratorDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PackParser::DecoratorDefContext::DecoratorName() {
  return getToken(PackParser::DecoratorName, 0);
}

tree::TerminalNode* PackParser::DecoratorDefContext::BraceLeft() {
  return getToken(PackParser::BraceLeft, 0);
}

tree::TerminalNode* PackParser::DecoratorDefContext::BraceRight() {
  return getToken(PackParser::BraceRight, 0);
}

PackParser::PackBlockContext* PackParser::DecoratorDefContext::packBlock() {
  return getRuleContext<PackParser::PackBlockContext>(0);
}

tree::TerminalNode* PackParser::DecoratorDefContext::Private() {
  return getToken(PackParser::Private, 0);
}

tree::TerminalNode* PackParser::DecoratorDefContext::Public() {
  return getToken(PackParser::Public, 0);
}

std::vector<PackParser::ArguementContext *> PackParser::DecoratorDefContext::arguement() {
  return getRuleContexts<PackParser::ArguementContext>();
}

PackParser::ArguementContext* PackParser::DecoratorDefContext::arguement(size_t i) {
  return getRuleContext<PackParser::ArguementContext>(i);
}


size_t PackParser::DecoratorDefContext::getRuleIndex() const {
  return PackParser::RuleDecoratorDef;
}


antlrcpp::Any PackParser::DecoratorDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitDecoratorDef(this);
  else
    return visitor->visitChildren(this);
}

PackParser::DecoratorDefContext* PackParser::decoratorDef() {
  DecoratorDefContext *_localctx = _tracker.createInstance<DecoratorDefContext>(_ctx, getState());
  enterRule(_localctx, 4, PackParser::RuleDecoratorDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _la = _input->LA(1);
    if (!(_la == PackParser::Private

    || _la == PackParser::Public)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(34);
    match(PackParser::DecoratorName);
    setState(35);
    match(PackParser::BraceLeft);
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PackParser::ArguemnetName) {
      setState(36);
      arguement();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == PackParser::T__0) {
        setState(37);
        match(PackParser::T__0);
        setState(38);
        arguement();
        setState(43);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(46);
    match(PackParser::BraceRight);
    setState(47);
    packBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecoratorCallContext ------------------------------------------------------------------

PackParser::DecoratorCallContext::DecoratorCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PackParser::DecoratorCallContext::At() {
  return getToken(PackParser::At, 0);
}

tree::TerminalNode* PackParser::DecoratorCallContext::DecoratorName() {
  return getToken(PackParser::DecoratorName, 0);
}

tree::TerminalNode* PackParser::DecoratorCallContext::BraceLeft() {
  return getToken(PackParser::BraceLeft, 0);
}

tree::TerminalNode* PackParser::DecoratorCallContext::BraceRight() {
  return getToken(PackParser::BraceRight, 0);
}

std::vector<PackParser::ExpressionContext *> PackParser::DecoratorCallContext::expression() {
  return getRuleContexts<PackParser::ExpressionContext>();
}

PackParser::ExpressionContext* PackParser::DecoratorCallContext::expression(size_t i) {
  return getRuleContext<PackParser::ExpressionContext>(i);
}


size_t PackParser::DecoratorCallContext::getRuleIndex() const {
  return PackParser::RuleDecoratorCall;
}


antlrcpp::Any PackParser::DecoratorCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitDecoratorCall(this);
  else
    return visitor->visitChildren(this);
}

PackParser::DecoratorCallContext* PackParser::decoratorCall() {
  DecoratorCallContext *_localctx = _tracker.createInstance<DecoratorCallContext>(_ctx, getState());
  enterRule(_localctx, 6, PackParser::RuleDecoratorCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(PackParser::At);
    setState(50);
    match(PackParser::DecoratorName);
    setState(51);
    match(PackParser::BraceLeft);
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PackParser::T__1)
      | (1ULL << PackParser::LenNext)
      | (1ULL << PackParser::Len)
      | (1ULL << PackParser::TimeStamp)
      | (1ULL << PackParser::RandBin)
      | (1ULL << PackParser::RandU8)
      | (1ULL << PackParser::RandU16)
      | (1ULL << PackParser::RandU32)
      | (1ULL << PackParser::RandU64)
      | (1ULL << PackParser::RandI8)
      | (1ULL << PackParser::RandI16)
      | (1ULL << PackParser::RandI32)
      | (1ULL << PackParser::RandI64)
      | (1ULL << PackParser::BitReserve)
      | (1ULL << PackParser::HexStart)
      | (1ULL << PackParser::BraceLeft)
      | (1ULL << PackParser::NumberConstant)
      | (1ULL << PackParser::StringConstant))) != 0)) {
      setState(52);
      expression(0);
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == PackParser::T__0) {
        setState(53);
        match(PackParser::T__0);
        setState(54);
        expression(0);
        setState(59);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(62);
    match(PackParser::BraceRight);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

PackParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PackParser::HexConstantContext* PackParser::ExpressionContext::hexConstant() {
  return getRuleContext<PackParser::HexConstantContext>(0);
}

tree::TerminalNode* PackParser::ExpressionContext::NumberConstant() {
  return getToken(PackParser::NumberConstant, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::StringConstant() {
  return getToken(PackParser::StringConstant, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::ArguemnetName() {
  return getToken(PackParser::ArguemnetName, 0);
}

PackParser::InnerFunctionContext* PackParser::ExpressionContext::innerFunction() {
  return getRuleContext<PackParser::InnerFunctionContext>(0);
}

tree::TerminalNode* PackParser::ExpressionContext::BitReserve() {
  return getToken(PackParser::BitReserve, 0);
}

std::vector<PackParser::ExpressionContext *> PackParser::ExpressionContext::expression() {
  return getRuleContexts<PackParser::ExpressionContext>();
}

PackParser::ExpressionContext* PackParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<PackParser::ExpressionContext>(i);
}

tree::TerminalNode* PackParser::ExpressionContext::BraceLeft() {
  return getToken(PackParser::BraceLeft, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::BraceRight() {
  return getToken(PackParser::BraceRight, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::BitXOr() {
  return getToken(PackParser::BitXOr, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::BitAnd() {
  return getToken(PackParser::BitAnd, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::BitOr() {
  return getToken(PackParser::BitOr, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::Multiply() {
  return getToken(PackParser::Multiply, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::Divide() {
  return getToken(PackParser::Divide, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::Add() {
  return getToken(PackParser::Add, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::Minus() {
  return getToken(PackParser::Minus, 0);
}

tree::TerminalNode* PackParser::ExpressionContext::Mod() {
  return getToken(PackParser::Mod, 0);
}


size_t PackParser::ExpressionContext::getRuleIndex() const {
  return PackParser::RuleExpression;
}


antlrcpp::Any PackParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


PackParser::ExpressionContext* PackParser::expression() {
   return expression(0);
}

PackParser::ExpressionContext* PackParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  PackParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  PackParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, PackParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PackParser::HexStart: {
        setState(65);
        hexConstant();
        break;
      }

      case PackParser::NumberConstant: {
        setState(66);
        match(PackParser::NumberConstant);
        break;
      }

      case PackParser::StringConstant: {
        setState(67);
        match(PackParser::StringConstant);
        break;
      }

      case PackParser::T__1: {
        setState(68);
        match(PackParser::T__1);
        setState(69);
        match(PackParser::ArguemnetName);
        break;
      }

      case PackParser::LenNext:
      case PackParser::Len:
      case PackParser::TimeStamp:
      case PackParser::RandBin:
      case PackParser::RandU8:
      case PackParser::RandU16:
      case PackParser::RandU32:
      case PackParser::RandU64:
      case PackParser::RandI8:
      case PackParser::RandI16:
      case PackParser::RandI32:
      case PackParser::RandI64: {
        setState(70);
        innerFunction();
        break;
      }

      case PackParser::BitReserve: {
        setState(71);
        match(PackParser::BitReserve);
        setState(72);
        expression(7);
        break;
      }

      case PackParser::BraceLeft: {
        setState(73);
        match(PackParser::BraceLeft);
        setState(74);
        expression(0);
        setState(75);
        match(PackParser::BraceRight);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(96);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(94);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(79);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(80);
          match(PackParser::BitXOr);
          setState(81);
          expression(5);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(82);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(83);
          _la = _input->LA(1);
          if (!(_la == PackParser::BitAnd

          || _la == PackParser::BitOr)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(84);
          expression(5);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(85);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(86);
          _la = _input->LA(1);
          if (!(_la == PackParser::Multiply

          || _la == PackParser::Divide)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(87);
          expression(4);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(88);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(89);
          _la = _input->LA(1);
          if (!(_la == PackParser::Add

          || _la == PackParser::Minus)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(90);
          expression(3);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(91);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(92);
          match(PackParser::Mod);
          setState(93);
          expression(1);
          break;
        }

        default:
          break;
        } 
      }
      setState(98);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ArguementContext ------------------------------------------------------------------

PackParser::ArguementContext::ArguementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PackParser::ArguementContext::ArguemnetName() {
  return getToken(PackParser::ArguemnetName, 0);
}

PackParser::TypeContext* PackParser::ArguementContext::type() {
  return getRuleContext<PackParser::TypeContext>(0);
}


size_t PackParser::ArguementContext::getRuleIndex() const {
  return PackParser::RuleArguement;
}


antlrcpp::Any PackParser::ArguementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitArguement(this);
  else
    return visitor->visitChildren(this);
}

PackParser::ArguementContext* PackParser::arguement() {
  ArguementContext *_localctx = _tracker.createInstance<ArguementContext>(_ctx, getState());
  enterRule(_localctx, 10, PackParser::RuleArguement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(PackParser::ArguemnetName);
    setState(100);
    match(PackParser::T__2);
    setState(101);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackBlockContext ------------------------------------------------------------------

PackParser::PackBlockContext::PackBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PackParser::PackLineContext *> PackParser::PackBlockContext::packLine() {
  return getRuleContexts<PackParser::PackLineContext>();
}

PackParser::PackLineContext* PackParser::PackBlockContext::packLine(size_t i) {
  return getRuleContext<PackParser::PackLineContext>(i);
}


size_t PackParser::PackBlockContext::getRuleIndex() const {
  return PackParser::RulePackBlock;
}


antlrcpp::Any PackParser::PackBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitPackBlock(this);
  else
    return visitor->visitChildren(this);
}

PackParser::PackBlockContext* PackParser::packBlock() {
  PackBlockContext *_localctx = _tracker.createInstance<PackBlockContext>(_ctx, getState());
  enterRule(_localctx, 12, PackParser::RulePackBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(PackParser::T__3);
    setState(107);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 1 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1 + 1) {
        setState(104);
        packLine(); 
      }
      setState(109);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
    setState(110);
    match(PackParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackLineContext ------------------------------------------------------------------

PackParser::PackLineContext::PackLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PackParser::TypeContext* PackParser::PackLineContext::type() {
  return getRuleContext<PackParser::TypeContext>(0);
}

PackParser::ExpressionContext* PackParser::PackLineContext::expression() {
  return getRuleContext<PackParser::ExpressionContext>(0);
}


size_t PackParser::PackLineContext::getRuleIndex() const {
  return PackParser::RulePackLine;
}


antlrcpp::Any PackParser::PackLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PackVisitor*>(visitor))
    return parserVisitor->visitPackLine(this);
  else
    return visitor->visitChildren(this);
}

PackParser::PackLineContext* PackParser::packLine() {
  PackLineContext *_localctx = _tracker.createInstance<PackLineContext>(_ctx, getState());
  enterRule(_localctx, 14, PackParser::RulePackLine);
